# vault-rummager

./: .env  .gitignore  Notes  README.md  podman-compose.yaml  pyproject.toml
notes/: TSWIFT copy.md  TSWIFT.md  hello_world.md
scripts/: chat.py  embed_notes.py  parse_notes.py  query.py  reindex.py
